TOPS-1022 added java args to help with PermGen space errors